--- a/red-yellow-green/index.html
+++ b/red-yellow-green/index.html
@@ -5,20 +5,20 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Red-Yellow-Green</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  <h1>DOM 元素操作練習 - 黃綠紅你要哪一個？</h1>
+  <h1>黃綠紅選一個</h1>
   <button id="changeButton">切換標題</button>
   <div id='title'>
     <h2>標題</h2>
   </div>
 
 
-  <h2>黃綠紅你要哪一個？點擊以下方塊</h2>
+  <h2>黃綠紅選一個？點擊以下方塊</h2>
   <div style="display: flex">
     <button class='colorSquare' id='red' value='red'></button>
     <button class='colorSquare' id='yellow' value='yellow'></button>
