--- a/stopwatch/index.html
+++ b/stopwatch/index.html
@@ -15,6 +15,6 @@
       <button id="button-stop">Stop</button><br>
       <button id="button-reset">Reset</button>
     </div>
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
